# yal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dub.json
.github/workflows/: main.yml
includes/: ast_nodes.h  channel.h  file.h  keywords.h  lexer.h  module.h  nasty_macros.h  parser.h  tokens.h
includes/task_system/: task_queue.h  task_system.h
source/: app.d
srcs/: lexer.cpp  main.cpp  parser.cpp
srcs/backend/llvm/: init.cpp
tests/lexer/: simple_lexer.cpp
wishlist/: basic_types.yal  functions.yal  keywords.md  module_level_statements.sl  simple_compile.yal  soa.yal  test.yal
